# cpp-mcp

./: REVERSE_PROXY.md
examples/: CMakeLists.txt  proxy_client_example.cpp  proxy_server.cpp  reverse_server_example.cpp
include/: mcp_reverse_client.h  mcp_server.h
src/: CMakeLists.txt  mcp_reverse_client.cpp
